[package]
name = "knife-util"
version = "0.1.1"
authors = ["ocaso <ocaso1987@qq.com>"]
description = "Knife框架基础工具包"
keywords = ["util"]
repository = "https://github.com/ocaso1987/knife-util/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
lazy_static = "1.4.0"
futures = { version = "0.3.23", features = ["thread-pool"] }
ctor = "0.1.23"
backtrace = "0.3.66"
anyhow = "1.0.62"
chrono = "0.4.22"
rug = { version = "1.17.0", features = ["serde"] }
globset = "0.4.9"
regex = "1.6.0"
handlebars = "4.3.3"
clap = "3.2.17"
bson = "2.4.0"
indexmap = "1.9.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
toml = "0.5.9"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
tracing = "0.1.36"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = "0.3.15"
sqlx = { version = "0.6.1", features = [
    "all",
    "runtime-tokio-native-tls",
    "offline",
] }
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
tonic = "0.8.0"

[features]
default = []
